<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuHome"
            android:checked="true"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/menuClean"
            android:icon="@android:drawable/ic_delete"
            android:title="@string/menu_clean" />


        <item
            android:id="@+id/menuAdd"
            android:icon="@drawable/ic_add_expense_white"
            android:title="@string/menu_add" />


    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuPlay"
            android:icon="@drawable/play_icon"
            android:title="Google Play" />

        <item
            android:id="@+id/menuAboutUs"
            android:icon="@drawable/about_us"
            android:title="@string/menu_about_us" />
        <item
            android:id="@+id/menuGit"
            android:icon="@drawable/legal"
            android:title="@string/menu_legal" />
    </group>
</menu>